<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuContainer" android:layout_width="150dp" android:layout_height="wrap_content"
    android:orientation="vertical" android:background="@drawable/menu_background" android:elevation="10dp" android:padding="4dp">
    <Button android:id="@+id/lockButton" android:layout_width="match_parent" android:layout_height="44dp" android:gravity="start|center_vertical" android:text="@string/menu_lock" />
    <Button android:id="@+id/volumeButton" android:layout_width="match_parent" android:layout_height="44dp" android:gravity="start|center_vertical" android:text="@string/menu_volume" />
    <Button android:id="@+id/powerButton" android:layout_width="match_parent" android:layout_height="44dp" android:gravity="start|center_vertical" android:text="@string/menu_power" />
</LinearLayout>
